# skill-bot

./: README.md  config.py  pyproject.toml  test.ipynb
.github/workflows/: pylint.yml
skill_bot/skills/: BaseSkill.py  YandexGPT.py  base_skill.py  yandex_gpt.py
src/skills/: YandexGPT.py
