[tool.poetry]
name = "skill-tgbot"
version = "0.1.0"
description = ""
authors = ["alexeymametyev <mametevalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "skill_tgbot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiogram = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
