[tool.poetry]
name = "skill_bot"
version = "0.1.0"
description = ""
authors = ["alexeymametyev <mametevalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "skill_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiogram = "^3.1.1"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
